# agentic-deal-finder

./: CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt  run_server.py
.claude/skills/dev-optimizer/: SKILL.md
config/: sites.yaml
src/agentic_deal_finder/: __init__.py  __main__.py  config.py  langgraph_flow.py  models.py  report.py  server.py
src/agentic_deal_finder/scrapers/: __init__.py  browser.py  duckduckgo_search.py  facebook_marketplace.py  walmart.py
src/agentic_deal_finder/tests/: README.md  test_integration.py
